some changes to the yaml and package
