# definition/game-score-openapi.yaml
@@ -1,5 +1,5 @@
 openapi: '3.0.2'
-#
+
 info:
   title: Game Score API
   description: |
@@ -14,11 +14,12 @@ info:
   contact:
     name: Marcos Carretero Poblete
     email: mcarretero214@gmail.com
-#
+
 servers:
   - url: https://api.server.test/api
-#
+
 paths:
+
   /players:
     post:
       summary: Registry for new users
@@ -45,10 +46,11 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         403:
           $ref: '#/components/responses/Forbidden'
-        500:
+        409:
+          $ref: '#/components/responses/Conflict'
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /players/me:
     patch:
       summary: User's password change
@@ -91,10 +93,9 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         403:
           $ref: '#/components/responses/Forbidden'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /players/{playerId}:
     parameters:
       - name: playerId
@@ -115,10 +116,9 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         403:
           $ref: '#/components/responses/Forbidden'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /scores:
     get:
       summary: Returns all the scores from the system
@@ -140,7 +140,7 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         403:
           $ref: '#/components/responses/Forbidden'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
 
     post:
@@ -168,10 +168,9 @@ paths:
           $ref: '#/components/responses/Unauthorized'
         403:
           $ref: '#/components/responses/Forbidden'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /scores/{scoreId}:
     parameters:
       - name: scoreId
@@ -205,7 +204,7 @@ paths:
           $ref: '#/components/responses/Forbidden'
         404:
           $ref: '#/components/responses/NotFound'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
         
     delete:
@@ -222,17 +221,15 @@ paths:
           $ref: '#/components/responses/Forbidden'
         404:
           $ref: '#/components/responses/NoContent'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /players-login:
     post:
       summary: Player's login into the application
       operationId: loginPlayer
       tags:
         - Log
-        - Players
       requestBody:
         description: Body of the request containing the login information of the user
         required: true
@@ -267,24 +264,23 @@ paths:
                   - token
         400:
           $ref: '#/components/responses/BadRequest'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
-#
+
   /players-logout:
     post:
       summary: Player's logout from the application
       operationId: logoutPlayer
       tags:
         - Log
-        - Players
       responses:
         204:
           $ref: '#/components/responses/NoContent'
-        500:
+        default:
           $ref: '#/components/responses/InternalServerError'
-#
+
 components:
+
   schemas:
     Id:
       description: objectId from the Mongo database
@@ -293,7 +289,7 @@ components:
       minLength: 24
       maxLength: 24
       example: 60799e1bd0c6bb02fcf51a90
-#
+
     Email:
       description: Email from the player
       type: string
@@ -301,13 +297,13 @@ components:
       minLength: 6
       maxLength: 100
       example: thisis@anexample.com
-#
+
     DateCre:
       description: Creation date of the new element in the system
       type: string
       format: date
       example: 2021-04-20
-#
+
     UserBody:
       description: Schema for the body of a user
       type: object
@@ -325,7 +321,7 @@ components:
         - email
         - gameTime
         - dateCre
-#
+
     ScoreBody:
       description: Schema for the body of a score
       type: object
@@ -354,28 +350,28 @@ components:
         - author
         - mode
         - dateCre
-#
+
     ErrorString:
       description: Message of error from an invalid request
       type: string
       example: Here's your error message
-#
-#
+
   responses:
+
     BadRequest:
       description: Bad request
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorString'
-#
+
     Unauthorized:
       description: Unauthorized
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorString'
-#
+
     Forbidden:
       description: Forbidden
       content:
@@ -389,13 +385,20 @@ components:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorString'
-#
+
     InternalServerError:
       description: Internal server error
       content:
         application/json:
           schema:
             $ref: '#/components/schemas/ErrorString'
-#
+
     NoContent:
       description: No content for the response
+
+    Conflict:
+      description: Conflict in database. Item already exists
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/ErrorString'
