# routes/players.js
@@ -18,7 +18,7 @@ Fawn.init(mongoose);
 router.post('/', validator(validate), async (req, res) => {
     // Comprobar que el usuario no está ya registrado
     let player = await Player.findOne({ email: req.body.email }).exec();
-    if (player) return res.status(400).send('Email already in use');
+    if (player) return res.status(409).send('Email already in use');
 
     // Guardar el nuevo usuario en la base de datos
     player = new Player(_.pick(req.body, ['email', 'password', 'gameTime']));
@@ -56,7 +56,7 @@ router.patch('/me', [auth, validator(validatePassword)], async (req, res) => {
 });
 
 // Eliminar un jugador (solo admin)
-router.delete('/:playerId', [auth, admin, validateObjectId(playerId)], async (req, res) => {
+router.delete('/:playerId', [auth, admin, validateObjectId], async (req, res) => {
     const player = await Player.findByIdAndRemove(req.params.playerId);
     if (!player) return notFound(res);
 
